# slambook

./: README.md
ch10/g2o_custombundle/: CMakeLists.txt  g2o_bal_class.h  g2o_bundle.cpp
ch10/g2o_custombundle/common/: BALProblem.cpp  BALProblem.h  projection.h
ch10/g2o_custombundle/common/tools/: rotation.h
ch11/: pose_graph_g2o_SE3.cpp
ch12/: CMakeLists.txt  feature_training.cpp  gen_vocab_large.cpp  loop_closure.cpp
ch13/dense_monocular/: dense_mapping.cpp
ch3/useEigenExt/: CMakeLists.txt  eigenMatrixExt.cpp
ch3/useGeometryExt/: CMakeLists.txt  eigenGeometryExt.cpp
ch4/useSophusExt/: CMakeLists.txt  useSophusExt.cpp
ch6/ceres_curve_fitting/: main.cpp
ch6/gassian-newton/: CMakeLists.txt  gsnt.cpp
ch6/gassian-newton2/: CMakeLists.txt  gsnt2.cpp
ch7/: CMakeLists.txt  extra.cpp  feature_extraction.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangulation.cpp
